--- a/Project.toml
+++ b/Project.toml
@@ -24,5 +24,5 @@ QuadGK = "^2.4"
 Roots = "1"
 SpecialFunctions = "^0.10.1, ^1"
 WignerFamilies = "^1.0.1"
-WignerSymbols = "^1.1"
+WignerSymbols = "^1.1, 2"
 julia = "1"
