CompatHelper: bump compat for SpecialFunctions to 2, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -26,7 +26,7 @@ ProgressMeter = "1"
 PyCall = "^1.92"
 QuadGK = "^2.4"
 Roots = "1"
-SpecialFunctions = "^0.10.1, ^1"
+SpecialFunctions = "^0.10.1, ^1, 2"
 WignerFamilies = "^1.0.1"
 WignerSymbols = "^1.1, 2"
 julia = "1"
