--- a/Project.toml
+++ b/Project.toml
@@ -1,19 +1,7 @@
-authors = ["Henry S. Grasshorn Gebhardt <henry.s.gebhardt@jpl.nasa.gov>"]
 name = "SphericalFourierBesselDecompositions"
 uuid = "7c5eff59-6392-4db1-b2e3-7d0560cca202"
+authors = ["Henry S. Grasshorn Gebhardt <henry.s.gebhardt@jpl.nasa.gov>"]
 version = "0.2.3"
-
-[compat]
-ArbNumerics = "^1.2"
-Healpix = "3"
-ProgressMeter = "1"
-PyCall = "^1.92"
-QuadGK = "^2.4"
-Roots = "1"
-SpecialFunctions = "^0.10.1, ^1, 2"
-WignerFamilies = "^1.0.1"
-WignerSymbols = "^1.1, 2"
-julia = "1"
 
 [deps]
 ArbNumerics = "7e558dbc-694d-5a72-987c-6f4ebed21442"
@@ -26,6 +14,7 @@ PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 QuadGK = "1fd47b50-473d-5c70-9696-f719f8f3bcdc"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
+Scanf = "6ef1bc8b-493b-44e1-8d40-549aa65c4b41"
 SharedArrays = "1a1011a3-84de-559e-8e89-a11a2f7dc383"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
@@ -33,6 +22,18 @@ Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 WignerD = "87c4ff3e-34df-11e9-37a7-516cea4e0402"
 WignerFamilies = "a8f88a7a-0a89-491c-8ecb-051e99aa9f5e"
 WignerSymbols = "9f57e263-0b3d-5e2e-b1be-24f2bb48858b"
+
+[compat]
+ArbNumerics = "^1.2"
+Healpix = "3"
+ProgressMeter = "1"
+PyCall = "^1.92"
+QuadGK = "^2.4"
+Roots = "1"
+SpecialFunctions = "^0.10.1, ^1, 2"
+WignerFamilies = "^1.0.1"
+WignerSymbols = "^1.1, 2"
+julia = "1"
 
 [extras]
 CPUSummary = "2a0fbf3d-bb9c-48f3-b0a9-814d99fd7ab9"
