CompatHelper: add new compat entry for WignerD at version 0.1, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -32,6 +32,7 @@ PyCall = "^1.92"
 QuadGK = "^2.4"
 Roots = "1, 2"
 SpecialFunctions = "^0.10.1, ^1, 2"
+WignerD = "0.1"
 WignerFamilies = "^1.0.1"
 WignerSymbols = "^1.1, 2"
 julia = "1"
