--- a/Project.toml
+++ b/Project.toml
@@ -31,6 +31,7 @@ ProgressMeter = "1"
 PyCall = "^1.92"
 QuadGK = "^2.4"
 Roots = "1, 2"
+Scanf = "0.5"
 SpecialFunctions = "^0.10.1, ^1, 2"
 WignerFamilies = "^1.0.1"
 WignerSymbols = "^1.1, 2"
