--- a/Project.toml
+++ b/Project.toml
@@ -27,6 +27,7 @@ WignerSymbols = "9f57e263-0b3d-5e2e-b1be-24f2bb48858b"
 [compat]
 ArbNumerics = "^1.2"
 Healpix = "3"
+LoopVectorization = "0.12"
 ProgressMeter = "1"
 PyCall = "^1.92"
 QuadGK = "^2.4"
