--- a/Project.toml
+++ b/Project.toml
@@ -36,6 +36,7 @@ QuadGK = "^2.4"
 Roots = "1, 2"
 Scanf = "0.5"
 SpecialFunctions = "^0.10.1, ^1, 2"
+ThreadsX = "0.1"
 WignerD = "0.1"
 WignerFamilies = "^1.0.1"
 WignerSymbols = "^1.1, 2"
