CI.yml: don't test nightly - it keeps failing

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -12,7 +12,7 @@ jobs:
         version:
           - '1.6'
           - '1'
-          - 'nightly'
+          #- 'nightly'  # always fails
         os:
           - ubuntu-latest
         arch:
