--- a/Project.toml
+++ b/Project.toml
@@ -25,7 +25,7 @@ WignerSymbols = "9f57e263-0b3d-5e2e-b1be-24f2bb48858b"
 
 [compat]
 ArbNumerics = "^1.2"
-FastTransforms = "0.13, 0.14, 0.15"
+FastTransforms = "0.13, 0.14, 0.15, 0.16"
 Healpix = "3, 4"
 LoopVectorization = "0.12"
 ProgressMeter = "1"
