--- a/Project.toml
+++ b/Project.toml
@@ -8,6 +8,7 @@ ArbNumerics = "7e558dbc-694d-5a72-987c-6f4ebed21442"
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 FastTransforms = "057dd010-8810-581a-b7be-e3fc3b93f78c"
 Healpix = "9f4e344d-96bc-545a-84a3-ae6b9e1b672b"
+KrylovKit = "0b1a1467-8014-51b9-945f-bf0ae24f4b77"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LoopVectorization = "bdcacae8-1622-11e9-2a5c-532679323890"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
