CompatHelper: bump compat for KrylovKit to 0.9, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -28,7 +28,7 @@ WignerSymbols = "9f57e263-0b3d-5e2e-b1be-24f2bb48858b"
 ArbNumerics = "^1.2"
 FastTransforms = "0.13, 0.14, 0.15, 0.16, 0.17"
 Healpix = "3, 4"
-KrylovKit = "0.7, 0.8"
+KrylovKit = "0.7, 0.8, 0.9"
 LoopVectorization = "0.12"
 ProgressMeter = "1"
 QuadGK = "^2.4"
