--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -39,6 +39,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - run: |
+          sudo apt-get install -y imagemagick
       - uses: julia-actions/setup-julia@v2
         with:
           version: '1'
